--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 
 <body>
     <div id="boxes">
-        <h1 id="box1" style="border-color: blue;">STATEMENT 1</h1>
-        <h1 id="box2" style="border-color: lightgray;">STATEMENT 2</h1>
-        <h1 id="box3" style="border-color: black;">STATEMENT 3</h1>
+        <h1 id="box1" style="border-color: blue;"></h1>
+        <h1 id="box2" style="border-color: lightgray;"></h1>
+        <h1 id="box3" style="border-color: black;"></h1>
     </div>
     <script type="text/javascript" src="script.js"></script>
 </body>
